add some validate methods